# crypto-exchange-api

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
src/: BinanceAPI.h  BithumbAPI.h  CoinBaseAPI.h  Errors.h  ExchangeManageMent.h  ExchangeType.h  UpbitAPI.h
unittest/: .gitignore  BInanceOrderTest.cpp  BinanceTest.cpp  BithumbTest.cpp  CMakeLists.txt  CURLTest.cpp  CoinBaseTest.cpp  ConfigTest.cpp  UpbitTest.cpp
unittest/lib/: CMakeLists.txt
unittest/lib/googlemock/: CMakeLists.txt
unittest/lib/googletest/: CMakeLists.txt
